[package]
authors = ["deciduously <ben@deciduously.com>"]
edition = "2018"
name = "aoc2019"
version = "0.1.0"

[dev-dependencies]

pretty_assertions = "0.6"

# some of these run very slowly with no opt
# and there are are minimal dependencies
# cargo test runs with optimizations
[profile.test]

opt-level = 3